core/asmglobal-control-plane/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: asmglobal-control-plane
  namespace: asmglobal-system
  labels:
    app: asmglobal-control-plane

spec:
  replicas: 1

  selector:
    matchLabels:
      app: asmglobal-control-plane

  template:
    metadata:
      labels:
        app: asmglobal-control-plane

    spec:
      containers:
        - name: control-plane
          image: knnrsolomon/asm-control-plane:control-prod-20261002-230725
          imagePullPolicy: Always

          ports:
            - containerPort: 80
