core/asmglobal-control-plane/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: asmglobal-control-plane
  namespace: asmglobal-system

spec:
  selector:
    app: asmglobal-control-plane

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
